# llm-service

./: .gitignore  Dockerfile  README.md  pyproject.toml
examples/: client.py
llm_service/: __init__.py  config.py  main.py  service.py
llm_service/utils/: __init__.py  logging.py  ollama.py
proto/: __init__.py  llm_pb2.py  llm_pb2_grpc.py
scripts/: generate_proto.py
tests/: __init__.py  test_service.py
